--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/renderer-react": "^0.2.2",
+    "@astrojs/renderer-react": "^0.3.1",
     "@stitches/astro": "https://pkg.csb.dev/modulz/stitches/commit/86f7072f/@stitches/astro",
-    "astro": "^0.20.12"
+    "@stitches/core": "^1.2.6",
+    "astro": "^0.21.2",
+    "autoprefixer": "^10.4.0"
   },
   "dependencies": {
     "@radix-ui/colors": "^0.1.7",
